@@ -1,5 +1,11 @@
 Release 0.38 - May ?, 2005
 
+Features added:
+- Autosave setting to automatically save after every change (1188194).
+- Backup setting to create a backup when opening a Task Coach file.
+- Added preference dialog to edit preferences not related to the 
+  view settings.
+
 
 
 Release 0.37 - May 14, 2005
